# audino

./: .gitignore  docker-compose.dev.yml  docker-compose.mac.dev.yml  pyproject.toml
backend/: config.py  requirements.txt
backend/routes/: audios.py  data.py
frontend/src/pages/: annotate.js
nginx/: nginx.conf
