[project]
name = "audino"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.2.1",
    "flask-login==0.4.1",
    "flask==1.1.1",
    "uwsgi==2.0.28",
    "flask-migrate==2.5.2",
    "flask-sqlalchemy==2.4.1",
    "flask-wtf==0.14.2",
    "itsdangerous==1.1.0",
    "jinja2==2.11.3",
    "mako==1.1.0",
    "markupsafe==1.1.1",
    "pymysql==0.9.3",
    "python-dateutil==2.8.0",
    "python-dotenv==0.10.3",
    "python-editor==1.0.4",
    "six==1.12.0",
    "sqlalchemy==1.3.9",
    "werkzeug==0.16.0",
    "wtforms==2.2.1",
    "flask-jwt-extended==3.25",
    "flask-redis==0.4.0",
    "flask-cors>=5.0.0",
]
